added Ann-Marie's comments

--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -199,7 +199,7 @@ We recommend proportional LRPs as the default approach for identifying LRPs for 
 Using this approach, the status of individual CUs is assessed and the proportion of CUs with status above Red is then compared to the LRP of 100% identified from Step 4.  Where available, we recommend applying CU assessments from recent peer-reviewed WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [@holtIndicatorsStatusBenchmarks2009; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than a generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
 
 
-Because WSP Integrated status assessments are resources-intensive processes involving large groups of experts over multiple days [@grantIntegratedBiologicalStatus2013] and are not available for most CUs, we demonstrate the application of the Pacific Salmon Status Scanner, which is a tool developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in Section \@ref(cu-est-methods) and our companion working paper (Holt et al. in review). Within this framework, CU status depends on a variety of population metrics, where the choice of metrics depends on data availability and may differ among CUs within an SMU. The Salmon Scanner integrates status on available metrics to derive an overall status that is comparable among CUs. 
+Because WSP Integrated status assessments are resources-intensive processes involving large groups of experts over multiple days [@grantIntegratedBiologicalStatus2013] and are not available for most CUs, we demonstrate the application of the Pacific Salmon Status Scanner, which is a tool developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in Section \@ref(cu-est-methods) and our companion working paper (Holt et al. In review). Within this framework, CU status depends on a variety of population metrics, where the choice of metrics depends on data availability and may differ among CUs within an SMU. The Salmon Scanner integrates status on available metrics to derive an overall status that is comparable among CUs. 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
 &nbsp;
@@ -324,7 +324,7 @@ In the context described here, aggregate abundance LRPs are scientifically deriv
 **What is an Acceptable Probability of CU Statuses Being Above Red?**
 
 
-To define aggregate abundance LRPs, first, an acceptable probability of having all component CU statuses above Red is identified. While a 100% or nearly 100% probability of all component CUs being above Red may be desirable from a conservation perspective, inherent uncertainties in population dynamics make this choice impractical. Often, LRPs above the highest observed aggregate spawner abundances are required to achieve a near 100% probability of components being above Red status. Instead, we recommend applying a probability of at least 50% of all CUs being above Red status to align with WSP objectives. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% (where analytically possible) derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010] (Table \@ref(tab:LikelihoodsIPCC)), instead of specifying a single probability because we could not identify a scientific basis for the choice). We distinguish the probability of *all* CUs being above Red from the proportion of CUs above Red (identified as 100% in Step 4). Both proportional and aggregate abundance LRPs indicate when all CUs are above Red, but aggregate abundance LRPs assign a probability to this occurrence.
+To define aggregate abundance LRPs, first, an acceptable probability of having all component CU statuses above Red is identified. While a 100% or nearly 100% probability of all component CUs being above Red may be desirable from a conservation perspective, inherent uncertainties in population dynamics make this choice impractical. Often, LRPs above the highest observed aggregate spawner abundances are required to achieve a near 100% probability of components being above Red status. Instead, we recommend applying a probability of at least 50% of all CUs being above Red status to align with WSP objectives. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% (where analytically possible) derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010] (Table \@ref(tab:LikelihoodsIPCC)), instead of specifying a single probability because we could not identify a scientific basis for the choice). We distinguish the biological basis of serious harm (any one CU having Red status) from the probability of this occurring, which implies a decision about risk tolerance. We further distinguish the probability of *all* CUs being above Red from the proportion of CUs above Red (identified as 100% in Step 4). Both proportional and aggregate abundance LRPs indicate when all CUs are above Red, but aggregate abundance LRPs assign a probability to this occurrence.
 
 
 \renewcommand*{\arraystretch}{1.6}
@@ -382,7 +382,7 @@ LRPs based on logistic regressions may be appropriate when the following assumpt
 CH: you're probably right, but I'm unsure how much afew is, and wonder if some (possibly rare) case having one year might work..?
 -   -->
 
-- There is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark without influential outliers, as supported by model diagnostics described in Holt et al. (in review). This relationship tends to be strong and positive when pairwise correlations in spawner abundances are strong and positive among CUs. For example, for Interior Fraser Coho, goodness-of-fit diagnostics identified a significant relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmarks (p<0.01) and the average pairwise spawner correlations among CUs was relatively high, 0.56. In contrast, for Inside South Coast Chum, the same goodness-of-fit diagnostic was not statistically significant (p=0.13) and average pairwise spawner correlations was relatively weak, 0.12.  <!--CH or Kendra: Check exact cor and p-values for IFR coho.--> <!--KH: I have updated to 0.56, which is the average among-CU pairwise correlation for natural-origin spawners. (Note - the value is very similar for total spawners) -->
+- There is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark without influential outliers, as supported by model diagnostics described in Holt et al. (In review). This relationship tends to be strong and positive when pairwise correlations in spawner abundances are strong and positive among CUs. For example, for Interior Fraser Coho, goodness-of-fit diagnostics identified a significant relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmarks (p<0.01) and the average pairwise spawner correlations among CUs was relatively high, 0.56. In contrast, for Inside South Coast Chum, the same goodness-of-fit diagnostic was not statistically significant (p=0.13) and average pairwise spawner correlations was relatively weak, 0.12.  <!--CH or Kendra: Check exact cor and p-values for IFR coho.--> <!--KH: I have updated to 0.56, which is the average among-CU pairwise correlation for natural-origin spawners. (Note - the value is very similar for total spawners) -->
 
 - Residuals for logistic regression model fit are independent (i.e., not temporally autocorrelated). <!--CH: "Or if autocorrelation is present in residuals, it is accounted for in the model with an AR(1) term."  Don't think we need it though  KH: agree - not needed.-->
 
@@ -417,6 +417,7 @@ LRPs based on logistic regressions may not be appropriate when:
 CW: Agree with the exclusion, otherwise we would also have to point out that aggregate abundance methods may not be appropriate when one or more CU's are missing data. -->
 
 <!--CH: the following 2 lines give a line break before the next heading-->
+
 \
 &nbsp;
 **Projection LRPs**
@@ -428,11 +429,11 @@ Projection LRPs may be appropriate when:
 
 - CU-specific stock assessment models have been developed including parameterization of spawner-recruitment models, covariance in recruitment residuals among CUs, and ages-at-maturity. These models and their parameters account for hatchery contributions when populations are influenced by hatcheries, are peer reviewed, and represent current dynamics of natural spawners and recruitment.
 <!--KH: The above suggests that a peer-review of SR models is required, however, the next bullet goes in to say that it is not. Perhaps just remove the mention of peer-review in the first bullet? In general, any application of projection LRPs will need to go through peer-review, so having previoulsy peer-reviewed models is not needed  -->
-- Where peer-reviewed population dynamics parameters are not available or are no longer current, plausible bounds can be placed on uncertain parameters (e.g., productivity and capacity), including those that may have changed over the time-series to represent a best-estimate of current conditions. 
+- Where peer-reviewed population dynamics parameters are not available or are no longer current, plausible bounds can be placed on uncertain parameters (e.g., productivity and capacity), including those that may have changed over the time-series to represent a best-estimate of current conditions. These bounds can be derived from neighbouring CUs, meta-analyses, or expert opinion.
 
 - These CU-specific parameters are available for representative CUs within the SMU (as identified in step 3)
 
-- Projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high to support weak CUs. In these cases, proportional LRPs, and harvest control rules that manage CUs independently may be more appropriate.
+- Projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high because there is a higher probability of any one CU having Red status. In these cases, proportional LRPs, and harvest control rules that manage CUs independently may be more appropriate.
 
 
 <!--CH: extra text I don't think is needed (but this point can be highlighted in Case Study paper): 
@@ -444,7 +445,7 @@ Projection LRPs may be inappropriate when:
 
 - Population dynamics parameters cannot be estimated, and/or plausible ranges are not known.
 
-- As described above, when pairwise correlations in spawner abundances among CUs are weakly positive or negative projection LRPs will be relatively high to support weak CUs, 
+- As described above, when pairwise correlations in spawner abundances among CUs are weakly positive or negative projection LRPs will be relatively high to support weak CUs. When used to inform operational control points, very high aggregate abundance LRPs may conflict with harvest or other socio-economic objectives, and harvest control rules that manage CUs independently may be more appropriate.
 
 - Projection LRPs are used to evaluate status under a new management procedure that is not considered in the projection model. Projection LRPs depend on the specific management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies. However, sensitivity analyses of projection LRPs to various exploitation rates or management procedures can demonstrate aggregate abundances required to maintain CUs above their lower benchmarks under a variety of possible management scenarios, and the sensitivity of management choice to the aggregate abundance LRP.
 
@@ -458,7 +459,7 @@ Projection LRPs may be inappropriate when:
 
 ### Step 9: Apply Aggregate Abundance LRPs
 
-Any aggregate-abundance methods that meet the above criteria are applied. See the companion working paper, Holt et al. (in review) for details of applications of these methods. Summaries are provided in Appendix \@ref(app:case-studies). When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'interim' until all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
+Any aggregate-abundance methods that meet the above criteria are applied. See the companion working paper, Holt et al. (In review) for details of applications of these methods. Summaries are provided in Appendix \@ref(app:case-studies). When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'interim' until all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
 &nbsp;
