responded to Mike Staley's comment

--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -153,7 +153,7 @@ We recommend further consideration and evaluation of the four proposed criteria 
 In addition, we recommend simulation evaluation of logistic regression LRPs and projection LRPs to data limitations related to the number of CUs with data and assumptions about population dynamics and covariance among CUs. We recommend that these evaluations be parameterized to the SMUs where their application is proposed to ensure results are relevant to the specific context under consideration.
 
 
-When applying methods to specific case studies, we recommend that aggregate abundance LRPs consider major structural uncertainties either through sensitivity analyses or model ensemble approaches. These analyses can determine how sensitive aggregate abundance benchmarks are to key model uncertainties, including those related to time-varying parameters, observation errors, and covariance in population dynamics and vulnerability to harvest. In addition, we recommend simulation evaluation to assess the robustness of LRPs to violating underlying analytical assumptions. Simulation evaluation could further be used to assess the frequency of updates to LRPs required to achieve objectives given underlying changes in model parameters and structure. <!--CH: observation errors in CU-status are relevant for logistic-regression LRPs as they might inflate noise in the LR, and they are relevant to the projection LRPs in the noise in the spawner and recruitment data-->
+When applying methods to specific case studies, we recommend that aggregate abundance LRPs consider major structural uncertainties either through sensitivity analyses or model ensemble approaches. These analyses can determine how sensitive aggregate abundance benchmarks are to key model uncertainties, including those related to time-varying parameters, depensation at low abundances, observation errors, and covariance in population dynamics and vulnerability to harvest. We emphasize the critical importance of this step considering a wide range of hypotheses about underlying dynamics. Indeed, standard stock-recruitment models may have limited use if they do not capture current dynamics. In addition, we recommend simulation evaluation to assess the robustness of LRPs to violating underlying analytical assumptions. Simulation evaluation could further be used to assess the frequency of updates to LRPs required to achieve objectives given underlying changes in model parameters and structure. <!--CH: observation errors in CU-status are relevant for logistic-regression LRPs as they might inflate noise in the LR, and they are relevant to the projection LRPs in the noise in the spawner and recruitment data-->
 
 
 
