--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -27,7 +27,7 @@ Within this principle, it is recognized that science is not static and new findi
 Similarly, best practices, or practices that have been demonstrated to work well can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008. The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time" [@sainsburyBestPracticeReference2008].
 
 
-**Principle 2**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionMakingFramework2009 and Section \@ref(intro). The LRP should be set above where serious harm occurs and should avoid long-term losses that may accompany such undesirable states, such as those associated with fishing and ecosystem components, e.g., supporting dependent predators [@dfoFisheryDecisionMakingFramework2009; @dfoPolicyNewFisheries2009]. In addition, LRPs should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are thought to represent the SMU (see Section \@ref(guidelines)). <!--CH: I have added this last sentence to align with Marentette et al. principle 2, below. However, it does sound a little awkward here.-->
+**Principle 2**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionMakingFramework2009 and Section \@ref(intro). The LRP should be set above where serious harm occurs and should avoid long-term losses that may accompany such undesirable states, such as those associated with fishing and ecosystem components, e.g., supporting dependent predators [@dfoFisheryDecisionMakingFramework2009; @dfoPolicyNewFisheries2009]. In addition, LRPs should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are thought to represent the SMU (Section \@ref(guidelines)). <!--CH: I have added this last sentence to align with Marentette et al. principle 2, below. However, it does sound a little awkward here.-->
 
 <!--Marentette et al Principle 2:
 2.1	Indicators and LRPs should be at minimum conceptually linked to one or more interpretations of serious harm such as impaired recruitment, productivity, resilience or ability to recover from perturbation.  
