--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -33,7 +33,7 @@ Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provis
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is expected to occur to the stock. Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics [@dfoHarvestStrategyCompliant2006]. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks is generally described in terms of impaired productivity due to changes in recruitment, growth, maturation and survival [@dfoProceedingsNationalPeer2016a], where resulting declines are irreversible or slow to be reversed [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or Allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Serious harm can also be associated with loss of resilience [@smithTechnicalGuidelinesProvision2012] and the inability to recover from perturbations [@dfoFisheryDecisionMakingFramework2009] due changes in stock structure or losses of phenotypic and genotypic diversity.
 Because population dynamics are not well understood at low population sizes [@dfoHarvestStrategyCompliant2006] and Allee effects are only infrequently observed in marine fish species [@keithPopulationDynamicsMarine2012, but see @chenIncorporatingAlleeEffects2002 and @cunninghamSizeSelectivityPredation2013], a biological basis for serious harm is often difficult to identify and quantify. 
 
-The definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term loss of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm mentions possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of mechanisms driving declines in productivity [but see @chagarisEcologicalReferencePoints2020].
+The definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term loss of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm includes possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of ecosystem linkages and dynamics [but see @chagarisEcologicalReferencePoints2020].
  
  <!--Marentette's description of serious harm (CH included in above revised text)
  "In the context of fisheries, serious harm can be interpreted as any undesirable changes to the biological attributes of the stock that make growth to target1 levels cease to be considered rapid and secure,1 and would thus encompass stock states before extinction is a concern.2,3 These changes can be associated with:
@@ -45,14 +45,14 @@ Serious harm may be irreversible or slow to be reversed over the long-term,5 and
 The LRP is a reference point that generally represents a threshold to stock states considered at rapidly increasing risk of serious harm.1,2 Under Canada’s PA Policy, the LRP is the boundary between the Critical and Cautious zones, and the LRP also often functions as an operational control point (points at which management measures change) in harvest strategies.6,8"
  -->
 
-Pacific salmon are unique among marine fish species because of their anadromous and semelparous life-history and significant meta-population structure, which results in differences in types of data available and modelling approaches for assessments relative to other marine species. These differences necessitate advice on LRP development that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. In prep.).
+Pacific salmon are unique among marine fish stocks due to their high levels of intraspecific diversity which gives rise to a large range in data availability, considerations, and approaches for assessments and LRP development.  These differences necessitate guidance on LRP methods that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. In prep.).
 
 Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting Conservation Units (CUs), will be defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
 
 
-Genetic and phenotypic diversity among CUs is important because it allows for diversity in responses to threats and environmental drivers, contributing to the sustainability of the species and the ecosystem services they provide [@pricePortfolioSimplificationArising2021a].  Portfolio effects have been shown to dampen interannual variance in aggregate-level recruitment due to independent dynamics among component sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity may buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes. However, deterioration of portfolio effects have been observed for Pacific salmon in Canada due to synchronous declining trends in abundances related to changes in climate and marine and freshwater habitats, as well as fishing practices that have overfished weak stocks [@pricePortfolioSimplificationArising2021a].
+Genetic and phenotypic diversity among CUs is important because it allows for diversity in responses to threats and environmental drivers, contributing to the sustainability of the species and the ecosystem services they provide [@pricePortfolioSimplificationArising2021a].  Portfolio effects have been shown to dampen interannual variance in aggregate-level abundances due to independent dynamics among component sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity may buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes. However, deterioration of portfolio effects have been observed for Pacific salmon in Canada due to synchronous declining trends in abundances related to changes in climate and marine and freshwater habitats, as well as fishing practices that have historically overfished weak stocks [@pricePortfolioSimplificationArising2021a].
 
-Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status: Green, Amber, and Red. These zones represent increasing conservation concern from Green to Red requiring increasing management intervention. The lower benchmark, delineating the Red and Amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada [@holtIndicatorsStatusBenchmarks2009; @dfoCanadaPolicyConservation2005]. In practice, CUs in the WSP Red status zone tend to align with Endangered or Threatened COSEWIC statuses, and Green with Not at Risk COSEWIC categories.<!--CH: added this for Sue. However, I don't think we can comment on the presence or size of buffer--> 
+Under the WSP, the status of individual CUs is inferred by comparing status indicators to biological benchmarks delineating three zones: Green, Amber, and Red. These zones represent increasing conservation concern from Green to Red requiring increasing management intervention. The lower benchmark, delineating the Red and Amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada [@holtIndicatorsStatusBenchmarks2009; @dfoCanadaPolicyConservation2005]. In practice, CUs in the WSP Red status zone tend to align with Endangered or Threatened COSEWIC statuses, and Green with Not at Risk COSEWIC categories.<!--CH: added this for Sue. However, I don't think we can comment on the presence or size of buffer--> 
 
 
 
@@ -60,12 +60,12 @@ Under the WSP, status of individual CUs is represented by comparing status indic
 
 While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised *Fisheries Act* indicates that a single LRP is required for each "Major Fish Stock"[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for the management of fisheries at the SMU level, while considering the need to maintain all CUs within an SMU in their Amber or Green status zones, i.e., above Red status. 
 
-In addition to biological reasons for assessing status at the spatial scale of CUs as described under the WSP, this scale is also relevant for key threats and management response of Pacific salmon, e.g., restoration of freshwater spawning or rearing habitat and hatchery enhancement. While the Fish Stocks provisions pertain to fisheries at scales relevant to harvest management, for many SMUs fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. Threats and management responses also extend to larger regional scales, e.g., mitigating climate impacts. Therefore, stock assessments are required at a hierarchy of spatial scales from CUs to aggregates of CUs at regional scales, sometimes across Pacific salmon species. 
+In addition to biological reasons for assessing status at the spatial scale of CUs as described under the WSP, this scale is also relevant for key threats and management activities for Pacific salmon, e.g., restoration of freshwater spawning or rearing habitat and hatchery enhancement. While the Fish Stocks provisions pertain to fisheries at scales relevant to harvest management, for many SMUs fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. Threats and management responses also extend to larger regional scales, e.g., mitigating climate impacts. Therefore, stock assessments are required at a hierarchy of spatial scales from CUs to aggregates of CUs at regional scales, sometimes across Pacific salmon species. 
 
 
 Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU. Identifying relevant spatial scales within CUs can be challenging due to uncertainty in meta-population dynamics and its impacts on long-term viability.
 
-Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely aligned with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are often not aligned with CUs - the biological unit of conservation under the WSP - and are not considered further here. Although the LRPs presented here are applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety of management decisions.
+Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely aligned with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are often not aligned with CUs - the biological unit of conservation under the WSP - and are not considered further here. Although the LRPs presented here are intended to be applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety of management decisions.
 
 
 
@@ -113,38 +113,38 @@ This working paper addresses these four goals, while the companion Working Paper
 
 In particular, this paper has six sections: 
 
-1. Introduction (this Section)
+1. Introduction
 
 2. A review of reference points and their roles for Pacific salmon
 
 3. Principles for the development of LRPs for Pacific salmon
 
-4. A description of candidate LRP methods, with further details in Holt et al. (In review). Appendix \@ref(app:case-studies) summaries their application to case studies
+4. A description of candidate LRP methods, with further details in Holt et al. (In review). Appendix \@ref(app:case-studies) summaries their application to three case studies.
 
 5. Guidelines on the implementation of LRPs including recommendations on when, and when not to use each candidate LRP method
 
 6. Discussion of uncertainties and recommendations on future research 
 
-This work was lead by a technical working group composed of DFO and First Nations analysts with expertise and knowledge associated with the biological basis of serious harm and analytical to support the development and application of candidate methods for LRPs. The technical working group was not intended to be a venue for engagement or to capture stakeholder perspectives or socioeconomic objectives. These considerations are relevant when developing management responses to stock assessments, but not in the assessment of stock status using LRPs. 
+This work was supported by a technical working group composed of DFO and First Nations analysts with analytical expertise on the biological basis of serious harm. The technical working group was not intended to be a venue for engagement or to capture stakeholder perspectives or socioeconomic objectives. While these considerations are relevant when developing management responses to stock assessments, they were not considered necessary for the development of analytical methods for LRPs. 
 
 
 ### Scope
 
 
-<!--CH: Sue suggested omitting: The LRPs considered here focus on characterizing serious harm to the stock based on levels and/or trends in spawner abundance. We have not included metrics or benchmarks of the status of salmon habitat [@stalbergCanadaPolicyConservation2009] or the ecosystem as a whole, though future analyses could include a more thorough characterization of the nature of serious harm to salmon [as in @dfoUpdateAssessmentFramework2016].-->
+<!--CH: Sue suggested omitting: The LRPs considered here focus on characterizing serious harm to the stock based on levels of and/or trends in spawner abundance. We have not included metrics or benchmarks of the status of salmon habitat [@stalbergCanadaPolicyConservation2009] or the ecosystem as a whole, though future analyses could include a more thorough characterization of the nature of serious harm to salmon [as in @dfoUpdateAssessmentFramework2016].-->
 
 
-While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step. Also, our applications of LRP methods to case studies are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. Furthermore, additional LRPs could be developed in the future, aligned with the key principles outlined here (Section \@ref(principles)).
+While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step. Also, our applications of LRP methods to case studies are for illustrative purposes only, and are not meant to be formal estimation of LRPs for those SMUs. Furthermore, additional LRPs could be developed in the future, aligned with the key principles outlined here (Section \@ref(principles)).
 
-Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes in Section \@ref(recommendations), a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
+Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those impacts in Section \@ref(recommendations), a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
 
 Here, we follow recommendations of @withlerGeneticallyBasedTargets2018 on the biological assessments of hatchery-influenced populations under the WSP, as described in Section \@ref(est-methods). Following recent WSP assessments, we also removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds were available. A review of methods for estimating proportion of hatchery-origin spawners or accounting for them in biological assessments was beyond the scope of this study.
 
-Here we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to assess status of CUs using multiple metrics, and have implemented this approach using the Pacific Salmon Status Scanner (or Salmon Scanner), documented in Pestal et al. (In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.]. The Salmon Scanner was developed from the implementation of formal, peer-reviewed WSP assessments for Pacific salmon stocks in Canada (see Section \@ref(est-methods)). A full review of the Salmon Scanner is beyond the scope of this paper. <!-- Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.-->
+Here we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to assess status of CUs using multiple metrics, and have implemented this approach using the Pacific Salmon Status Scanner (or Salmon Scanner), documented in Pestal et al. (In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.]. The Salmon Scanner was developed from the implementation of formal, peer-reviewed WSP assessments for Pacific salmon stocks in Canada (Section \@ref(est-methods)). A full review of the Salmon Scanner is beyond the scope of this paper. <!-- Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.-->
 
-Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with local knowledge holders, managers and stakeholders.
+Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, and requires broader discussion with managers, First Nations, and stakeholders.
 
-While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stocks provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stocks provisions (e.g., including management of habitat and hatcheries) is also beyond our scope, and is a gap that warrants further discussion.  We highlight a few possible roles for LRPs below. We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stocks provisions.
+While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stocks provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stocks provisions (e.g., including management of habitat and hatcheries) is also beyond our scope, and is a gap that warrants further discussion.  We highlight a few possible roles for LRPs in Section \@ref(roleLRPs). Lastly, we do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stocks provisions.
 
 <!--CH: Not sure is the R chunk below is necessary? If we remove, do we need to add gpplot2, knitr, bookdown, devtools to index file? Leave for now-->
 
