--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -16,17 +16,17 @@ LRP methods require assessments of status at the scale of CUs. Abundance data re
 \end{itemize}
 \end{tcolorbox}
 
-Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool and to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness defined as adult-to-adult reproductive success, and is considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin and their progeny are not considered "wild" under the Wild Salmon Policy and typically only populations dominated by wild salmon are included in assessments of biological status. However separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are not often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003] do not have biological sampling programs to collect mark and tag data from individual salmon. 
+Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool as well as to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness defined as adult-to-adult reproductive success, and is considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin and their progeny are not considered "wild" under the Wild Salmon Policy and typically only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are not often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003] do not have biological sampling programs to collect mark and tag data from individual salmon. 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
 &nbsp;
 **Accounting for genetic risk of hatchery production**
 
-Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant hatchery enhancement in analyses of CU and SMU biological status consistent with the WSP. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values $<$ 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and $<$ 0.72 indicating integrated-transition where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. While these guidelines were proposed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018]. 
+Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant hatchery enhancement in analyses of CU and SMU biological status consistent with the WSP. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values $<$ 0.5 indicating integrated-hatchery populations, where more than half of spawners are hatchery origin, values  $\geqslant$ 0.5 and $<$ 0.72 indicating integrated-transition where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where more than half of spawners are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. While these guidelines were proposed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018]. 
 
 
 
-Specifically, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild for biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. For hatcheries aimed at rebuilding critically depleted populations, production may be dominated by hatchery-origin fish for a period until abundances are above lower conservation thresholds. Guidelines on the assessment and management of these conservation hatcheries are being developed by DFO's Salmonid Enhancement Program.
+Specifically, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild for biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with more than half of spawners being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. For hatcheries aimed at rebuilding critically depleted populations, production may be dominated by hatchery-origin fish for a period until abundances are above lower conservation thresholds. Guidelines on the assessment and management of these conservation hatcheries are being developed by DFO's Salmonid Enhancement Program.
 
 
 Data used to assess hatchery contribution to spawning and estimate PNI values are associated with high uncertainties. The proportion of hatchery-origin spawners are determined from spawning ground surveys for thermal marks of hatchery-origin salmon. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty. Large interannual variability in the proportion of hatchery-origin spawners can result from natural variability in survival of hatchery vs. natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors requiring decisions about temporal averaging. Here we averaged over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation vs. entire time period). 
@@ -47,13 +47,13 @@ In addition, @withlerGeneticallyBasedTargets2018 recommend that populations domi
 For integrated-transition and integrated-wild populations, in some cases WSP assessments have removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
 
 
-In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5)[e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may a risk of current status reflecting hatchery production which masks changes in natural production production and obscures inferences for unenhanced populations in the CU. This risk is partly mediated but not dismissed by removing populations that are dominated by hatchery-origin fish from assessments.
+In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5)[e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may a risk of current status being confounded by hatchery production which masks changes in natural production production and obscures inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments.
 
 
 
 
 
-<!--CH remove, replaced with pgh above: In addition, some populations without hatcheries may be influenced by straying from hatcheries from neighbouring populations ('out-of-basin' strays). In this case, a very large fraction of fish may be wild, however, if straying continues over long time periods, gene flow modelling shows that that the genetic influence of hatcheries will increase as well [@withlerGeneticallyBasedTargets2018].The impact of these strays is generally excluded in assessments in part because of the absence of marking and spawning ground sampling for hatchery fish or genetic studies to determine their influence, and so out-of-basin strays are included in total abundances. Studies evaluating the extent of straying for Chinook Salmon for the West Coast of Vancouver Island are on-going (W. Luedke pers. comm.) and previous research by Candy and Beacham (2000) described the patterns in Southern BC. 
+<!--CH remove, replaced with pgh above: In addition, some populations without hatcheries may be influenced by straying from hatcheries from neighbouring populations ('out-of-basin' strays). In this case, a very large fraction of fish may be wild, however, if straying continues over long time periods, gene flow modelling shows that that the genetic influence of hatcheries will increase as well [@withlerGeneticallyBasedTargets2018].The impact of these strays is generally excluded in assessments in part because of the absence of marking and spawning ground sampling for hatchery fish or genetic analyses to determine their influence, and so out-of-basin strays are included in total abundances. Studies evaluating the extent of straying for Chinook Salmon for the West Coast of Vancouver Island are on-going (W. Luedke pers. comm.) and previous research by Candy and Beacham (2000) described the patterns in Southern BC. 
  -->
 
 <!--CH removed: "Recruitment data are generally not available for these stocks, so stock-recruitment analyses are usually not implemented. In one exception for Pitt River Sockeye Salmon,  spawner abundances were determined from brood take plus total spawners in the natural environment and recruitment was total recruits from both hatchery and natural environment (Pitt River, Grant et al. 2011)".-->
@@ -190,7 +190,7 @@ Also, based on the IUCN probability categories in case studies paper section 2.3
 CH: good points Luke. Also, rebuilding guidance (DFO 2021) suggests precaution should be built into the management system and not the trigger for rebuilding.  i.e., 10% probability of breaching the LRP is not a breach. They suggest 50% probability is appropriate, which makes me wary about choosing a higher %. However, as you suggested, I have revised the text to say we recommend at least a 50% probability. 
 Another challenge when applying these choices to logistic regression-based LRPs is that high probabilities, the curve is quite flat, so the difference between an LRP at p=0.9 and 0.95 can be double or more in value for LRP-- so really hard to justify one value over the other. However at p=0.5, the curve is steep, so changing from p=0.4-0.6 doesn't really matter for the LRP.
 -->
-Uncertainty in logistic-regression based LRP estimates can be quantified based on confidence or credible intervals on the LRP estimate (see our application to Interior Fraser Coho Salmon (Holt et al. In review)).
+Uncertainty in logistic-regression based LRP estimates can be quantified based on confidence or credible intervals on the LRP estimate. See our application to Interior Fraser Coho Salmon for an example (Holt et al. In review).
 
 
 ```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represent a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their lower benchmark, LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line is the maximum likelihood model fit to indicator data, and the grey shaded region shows the 95\\% confidence interval around the fit model. Coloured lines illustrate aggregate abundance LRPs for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all CUs > LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
