--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -109,7 +109,7 @@ In some cases, finer spatial scales than CU (e.g., watersheds or subpopulations 
 
 Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution as spatial units that are demographically independent such that the  population dynamics of one unit are unlikely to affect the dynamics of another, but that genetic exchange is expected to occur at greater rates than observed among populations (CUs), and would likely exceed 10 effective migrants per generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
 
-We recommend that the decision on distribution and spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010). 
+We recommend that the decision on distribution and spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability [e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010]. 
 
 
 Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (identified by PNI values < 0.5, or expert opinion when data on the proportion of hatchery-origin spawners are not available) are generally excluded from analyses, while those that are dominated by natural-origin fish (e.g., PNI values are $\geqslant$ 0.5), are generally included in analyses [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of hatchery-origin salmon on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to generate time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to the presence of hatcheries and annual variation in hatchery practices.  
@@ -180,7 +180,7 @@ CH: I think we've landed on an SMU is DD only if status is amber/green on data-r
 
 ### Step 4: What Proportion of CUs Above Red Status is Required to Avoid Serious Harm?
 
-In order to apply proportional LRPs, a lower limit on the proportion of CUs above Red status needs to be defined. @dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the WSP to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified a threshold of 100$\%$ of CUs above the Red zone as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are designated extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. <!--LW: question, so if a CU goes extinct it doesn't count in the 100% LRP for the SMU anymore? Wouldn't a CU going extinct represent serious harm/impaired productivity?- CH: but when it's extinct by definition it can't be recovered so a rebulidng plan is moot; unlike extirpated or critically endangered. CH: if it's extinct it cannot be rebuilt by definition. I think out goal is to  assess serious harm on extant CUs. Proof of extinction takes a long time (.e., 30-50 years under COSEWIC), so I don't think this the case for many; Until it's designated extinct it would still be considered serious harm. -->
+In order to apply proportional LRPs, a lower limit on the proportion of CUs above Red status needs to be defined. @dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the WSP to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified a threshold of 100$\%$ of CUs above the Red zone as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs [e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007] or CUs are designated extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. <!--LW: question, so if a CU goes extinct it doesn't count in the 100% LRP for the SMU anymore? Wouldn't a CU going extinct represent serious harm/impaired productivity?- CH: but when it's extinct by definition it can't be recovered so a rebulidng plan is moot; unlike extirpated or critically endangered. CH: if it's extinct it cannot be rebuilt by definition. I think out goal is to  assess serious harm on extant CUs. Proof of extinction takes a long time (.e., 30-50 years under COSEWIC), so I don't think this the case for many; Until it's designated extinct it would still be considered serious harm. -->
 
 This step omits decisions about how to prioritize CUs for conservation given variability in their capacity to rebuild. For some CUs the potential for rebuilding to above the Red zone may be extremely low because of natural conditions or anthropogenic threats. For example, some CUs are naturally more vulnerable to threats because of their biological characteristics (e.g., small habitat capacities) placing them in the Red zone. However, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost. Rebuilding may also be limited due anthropogenic threats such as climate change. Recent vulnerability assessments indicate that many salmon populations will not be resilient to climate change in the coming decades [@crozierClimateVulnerabilityAssessment2019; @crozierClimateChangeThreatens2021]. These considerations should be identified in  rebuilding potential analyses to inform decisions about where resources should be allocated in a rebuilding plan [e.g., @carwardinePriorityThreatManagement2019]. Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] and are outside the scope of identifying LRPs. Those analyses can then inform decisions about prioritizing CUs and management actions, with various sectors and stakeholders.
 
@@ -308,9 +308,9 @@ The frequency of SMU-scale peer reviews outside of the annual implementation of 
 
 ### Step 7: Are Aggregate Abundance LRPs Required For Fisheries Management? 
 
-Although proportional LRPs may meet requirements under the Fish Stock provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decisions (see Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty provisions (2019) <!--@TreatyGovernmentCanada2019 . Have to figure out how to reference this without having the full name of the treaty here-->, however to meet WSP objectives, the aggregate escapement goal must consider CU-level diversity. 
+Although proportional LRPs may meet requirements under the Fish Stock provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decisions (Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty provisions (2019) <!--@TreatyGovernmentCanada2019 . Have to figure out how to reference this without having the full name of the treaty here-->, however to meet WSP objectives, the aggregate escapement goal must consider CU-level diversity. 
 
-However, when LRPs are defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance LRP may not be required if the framework can demonstrate the probability of individual CUs having status above Red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, gear restrictions, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions that affect the SMU. If aggregate abundance LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (7-9) are relevant if aggregate abundance LRPs are required, and build on proportional LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
+However, when LRPs are defined within the context of a Management Procedure framework (Section \@ref(roleLRPs)), then an aggregate abundance LRP may not be required if the framework can demonstrate the probability of individual CUs having status above Red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, gear restrictions, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions that affect the SMU. If aggregate abundance LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (7-9) are relevant if aggregate abundance LRPs are required, and build on proportional LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
 
 
 In the context described here, aggregate abundance LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). In particular, aggregate abundance LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs.  Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
@@ -350,7 +350,7 @@ An additional consideration in this step is the probability threshold for trigge
 
 
 
-Although, @dfoScienceAdvicePrecautionary2021 reiterates @dfoFisheryDecisionMakingFramework2009 that LRPs under Fish Stock provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above Red status that aligned with scientific principles. Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options is required. <!--CW -I am not sure if the probability level is part of the LRP. I think it is part of the objective, and as such, it should not be determined by science. LW: related to comments in Ch 4, re: probability higher than 0.5 --> Alternatively, proportional LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportional LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time-frame identified within the objective are identified with managers and stakeholders. When used as part of Management Procedure Framework (e.g.,  @dfoManagementProcedureFramework2021) or management strategy evaluation (MSE), the performance of a variety of management procedures against objectives can be evaluated, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportional LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers and stakeholders.
+Although, @dfoScienceAdvicePrecautionary2021 reiterates @dfoFisheryDecisionMakingFramework2009 that LRPs under Fish Stock provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above Red status that aligned with scientific principles. Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options is required. <!--CW -I am not sure if the probability level is part of the LRP. I think it is part of the objective, and as such, it should not be determined by science. LW: related to comments in Ch 4, re: probability higher than 0.5 --> Alternatively, proportional LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportional LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time-frame identified within the objective are identified with managers and stakeholders. When used as part of Management Procedure Framework [e.g.,  @dfoManagementProcedureFramework2021] or management strategy evaluation (MSE), the performance of a variety of management procedures against objectives can be evaluated, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportional LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers and stakeholders.
 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
